--- a/shareitemservice/pom.xml
+++ b/shareitemservice/pom.xml
@@ -107,6 +107,7 @@
         <dependency>
             <groupId>org.antlr</groupId>
             <artifactId>stringtemplate</artifactId>
+            <scope>runtime</scope>
         </dependency>
 
         <dependency>
