--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
 
     <modules>
         <module>shareitemservice</module>
+        <module>common</module>
     </modules>
 
     <properties>
@@ -64,6 +65,12 @@
             <dependency>
                 <groupId>io.dropwizard</groupId>
                 <artifactId>dropwizard-jdbi</artifactId>
+                <version>${dep.dropwizard.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>io.dropwizard</groupId>
+                <artifactId>dropwizard-auth</artifactId>
                 <version>${dep.dropwizard.version}</version>
             </dependency>
 
