--- a/shareitemservice/pom.xml
+++ b/shareitemservice/pom.xml
@@ -15,19 +15,11 @@
 
 
     <dependencies>
-
-        <!--<dependency>-->
-            <!--<groupId>${project.parent.groupId}</groupId>-->
-            <!--<artifactId>userauth</artifactId>-->
-            <!--<version>${project.version}</version>-->
-        <!--</dependency>-->
-
         <dependency>
             <groupId>${project.parent.groupId}</groupId>
             <artifactId>common</artifactId>
             <version>${project.version}</version>
         </dependency>
-
 
         <dependency>
             <groupId>com.amazonaws</groupId>
@@ -42,6 +34,11 @@
         <dependency>
             <groupId>io.dropwizard</groupId>
             <artifactId>dropwizard-jdbi</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>io.dropwizard</groupId>
+            <artifactId>dropwizard-auth</artifactId>
         </dependency>
 
         <dependency>
