--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,7 @@
 
         <dep.dropwizard.version>0.7.1</dep.dropwizard.version>
         <dep.jetty.version>9.0.7.v20131107</dep.jetty.version>
+        <dep.swagger.version>1.3.10</dep.swagger.version>
     </properties>
 
     <dependencyManagement>
@@ -72,6 +73,12 @@
                 <groupId>io.dropwizard</groupId>
                 <artifactId>dropwizard-auth</artifactId>
                 <version>${dep.dropwizard.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>com.wordnik</groupId>
+                <artifactId>swagger-jaxrs_2.10</artifactId>
+                <version>${dep.swagger.version}</version>
             </dependency>
 
             <dependency>
