--- a/pom.xml
+++ b/pom.xml
@@ -79,6 +79,12 @@
                 <groupId>com.wordnik</groupId>
                 <artifactId>swagger-jaxrs_2.10</artifactId>
                 <version>${dep.swagger.version}</version>
+                <exclusions>
+                    <exclusion>
+                        <groupId>com.google.code.findbugs</groupId>
+                        <artifactId>jsr305</artifactId>
+                    </exclusion>
+                </exclusions>
             </dependency>
 
             <dependency>
