--- a/shareitemservice/pom.xml
+++ b/shareitemservice/pom.xml
@@ -52,8 +52,8 @@
         </dependency>
 
         <dependency>
-            <groupId>com.wordnik</groupId>
-            <artifactId>swagger-jaxrs_2.10</artifactId>
+            <groupId>io.federecio</groupId>
+            <artifactId>dropwizard-swagger</artifactId>
         </dependency>
 
         <dependency>
