--- a/shareitemservice/pom.xml
+++ b/shareitemservice/pom.xml
@@ -15,11 +15,11 @@
 
 
     <dependencies>
-        <!--<dependency>-->
-            <!--<groupId>${project.parent.groupId}</groupId>-->
-            <!--<artifactId>common</artifactId>-->
-            <!--<version>${project.version}</version>-->
-        <!--</dependency>-->
+        <dependency>
+            <groupId>${project.parent.groupId}</groupId>
+            <artifactId>common</artifactId>
+            <version>${project.version}</version>
+        </dependency>
 
         <dependency>
             <groupId>com.amazonaws</groupId>
