--- a/common/pom.xml
+++ b/common/pom.xml
@@ -17,5 +17,10 @@
             <groupId>io.dropwizard</groupId>
             <artifactId>dropwizard-jdbi</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>io.dropwizard.modules</groupId>
+            <artifactId>dropwizard-flyway</artifactId>
+        </dependency>
     </dependencies>
 </project>
