--- a/pom.xml
+++ b/pom.xml
@@ -264,6 +264,12 @@
             </dependency>
 
             <dependency>
+                <groupId>org.joda</groupId>
+                <artifactId>joda-money</artifactId>
+                <version>0.10.0</version>
+            </dependency>
+
+            <dependency>
                 <groupId>com.fasterxml.jackson.datatype</groupId>
                 <artifactId>jackson-datatype-joda</artifactId>
                 <version>${dep.jackson.version}</version>
